:gear: Modified some configuration files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/images/*": ["assests/images/*"],
       "@/audio/*": ["assests/audio/*"],
       "@/util/*": ["util/*"],
+      "@/icons/*": ["icons/*"]
     }
   },
   "include": ["src", "types"],
