--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
@@ -21,6 +20,7 @@
     "autoprefixer": "^10.4.12",
     "firebase": "^9.10.0",
     "postcss": "^8.4.17",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
     "vite": "^3.1.4",
