--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,14 @@
     ],
     "headers": [
       {
-        "source": "**/*.@(webp|jpg|jpeg|gif|png)",
+        "source": "**/*.@(webp|jpg|jpeg|gif|png|svg)",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=604800"
+        }]
+      },
+      {
+        "source": "**/*.@(css|js)",
         "headers": [{
           "key": "Cache-Control",
           "value": "max-age=86400"
