--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@/images/*": ["assests/images/*"],
       "@/audio/*": ["assests/audio/*"],
       "@/util/*": ["util/*"],
-      "@/icons/*": ["icons/*"]
+      "@/icons/*": ["icons/*"],
+      "@/styles/*": ["assests/styles/*"]
     }
   },
   "include": ["src", "types"],
