--- a/.github/workflows/firebase-workflow.yml
+++ b/.github/workflows/firebase-workflow.yml
@@ -1,4 +1,5 @@
-name: Beta Hosting on merge
+name: Beta Hosting on push
+run-name: Beta hosting on push ${{ github.actor }}
 on:
   push:
     paths:
@@ -14,7 +15,7 @@ on:
       - development
 jobs:
   build_and_preview:
-    if: '${{ github.event.pull_request.head.repo.full_name == github.repository && github.event.pull_request.head.repo.fork == false }}'
+    if: '${{ github.repository_owner == github.triggering_actor }}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
