--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -14,9 +14,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: "Node Install & Build"
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: "Node checkout"
+        uses: actions/checkout@v3
+      - name: "Node install"
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci && npm run build
+      - name: "Install dependencies"
+        run: npm ci
+      - name: "Build the library"
+        run: npm build
