:bug: Bug fixes

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -23,7 +23,7 @@ jobs:
       - name: "Install dependencies"
         run: npm ci
       - name: "Build the library"
-        run: npm build
+        run: npm run build
   
   dev_preview:
     runs-on: ubuntu-latest
