--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
       - name: "Build the library"
         run: npm run build
-  
+  # Preview: Beta channel
   dev_preview:
     runs-on: ubuntu-latest
     needs: build
