--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -27,11 +27,13 @@ jobs:
   # Preview: Beta channel
   dev_preview:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build]
     if: ${{ github.event_name == 'push' && github.repository_owner == github.triggering_actor && github.ref_name == 'development' }} 
     steps:
       - name: "Node checkout"
         uses: actions/checkout@v3
+      - name: Run a one-line script
+        run: ls
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
