--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: "Node checkout"
+      - name: "Checkout"
         uses: actions/checkout@v3
       - name: "Node install"
         uses: actions/setup-node@v3
@@ -24,19 +24,22 @@ jobs:
         run: npm ci
       - name: "Build the library"
         run: npm run build
-      - name: Run a one-line script
-        run: ls
   # Preview: Beta channel
   dev_preview:
     runs-on: ubuntu-latest
     needs: [build]
     if: ${{ github.event_name == 'push' && github.repository_owner == github.triggering_actor && github.ref_name == 'development' }} 
     steps:
-      - name: "Node checkout"
+      - name: "Checkout"
         uses: actions/checkout@v3
-      - name: Run a one-line script
-        run: ls
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: "Node install"
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: "Install dependencies & build"
+        run: npm ci && npm run build
+      - name: "Firebase hosting to beta channel"
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIRE_APPS_7827C }}'
