--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -33,7 +33,7 @@ jobs:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
       - name: "Upload the build artifact"
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: build
           path: build
