--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,8 +1,14 @@
 name: "Firebase hosting CI/CD"
 on:
   schedule:
-    - cron: 30 5 * * FRI
+    - cron: 35 8 * * FRI
   push:
+    paths:
+      - "src/**"
+      - "types/**"
+      - "firebase.json"
+      - "public/404.html"
+      - "index.html"
     branches:
       - "development"
 jobs:
@@ -32,7 +38,7 @@ jobs:
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
-      - name: "Upload the build artifact"
+      - name: "Download the build artifact"
         uses: actions/download-artifact@v3
         with:
           name: build
@@ -48,4 +54,23 @@ jobs:
           projectID: fire-apps-7827c
 
   
-  # beta_preview:
+  live_preview:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    if: ${{ github.event_name == 'schedule' }}
+    steps:
+      - name: "Checkout to the branch"
+        uses: actions/checkout@v3
+      - name: "Download the build artifact"
+        uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: build
+      - name: Deploy to firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIRE_APPS_7827C }}'
+          channelID: live
+          target: birthday-card
+          projectID: fire-apps-7827c
