--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,7 +1,7 @@
 name: "Firebase hosting CI/CD"
 on:
   schedule:
-    - cron: 35 8 * * FRI
+    - cron: 40 8 * * *
   push:
     paths:
       - "src/**"
