--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,9 +1,9 @@
 name: "Firebase hosting CI/CD"
 on:
   schedule:
-    # Release a version everyday at 23:59 (IST)
+    # Release a version everyday at 00:00 UTC or 05:30 IST (Same day)
     # Ensures that anyone with bday gets fresh stuff.
-    - cron: '40 18 * * *'
+    - cron: '30 * * * *'
   push:
     paths:
       - "src/**"
