--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -13,6 +13,8 @@ on:
       - "index.html"
     branches:
       - "development"
+  workflow_dispatch:
+    
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -65,7 +67,7 @@ jobs:
   live_preview:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{ github.event_name == 'schedule' }}
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
