--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,8 +1,7 @@
 name: "Firebase hosting CI/CD"
 on:
   schedule:
-    # Release a version everyday at 00:00 UTC every day.
-    - cron: '0 0 */1 * *'
+    - cron: '45 19 * * FRI'
   push:
     paths:
       - "src/**"
@@ -10,6 +9,8 @@ on:
       - "firebase.json"
       - "public/404.html"
       - "index.html"
+      # 📦 Dependency changes
+      - "package.json"
     branches:
       - "development"
   workflow_dispatch:
@@ -36,7 +37,7 @@ jobs:
   
   beta_preview:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [ build ]
     if: ${{ github.event_name == 'push' && github.repository_owner == github.triggering_actor && github.ref_name == 'development' }}
     steps:
       - name: "Checkout to the branch"
@@ -62,11 +63,11 @@ jobs:
           name: build
           failOnError: 'false'
 
-  
+  # Manually triggered or Auto triggered
   live_preview:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'schedule' || github.ref_name == 'main' }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
