--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -16,6 +16,14 @@ on:
   workflow_dispatch:
     
 jobs:
+
+  triggered_at:
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    steps:
+      - name: "Get the current date & time"
+        run: 'echo "Current Date & Time: $(date "+%A %d %B %Y, %T %Z (%:z UTC)")"'
+
   build:
     runs-on: ubuntu-latest
     steps:
