--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^10.11.0",
     "firebase": "^9.13.0",
     "postcss": "^8.4.18",
     "react-toastify": "^9.0.8",
