--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,7 +1,7 @@
 name: "Firebase hosting CI/CD"
 on:
   schedule:
-    - cron: '0 0 */1 * *'
+    - cron: '0 0 */1 * 0'
   push:
     paths:
       - "src/**"
