--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,9 @@
-PUBLIC_RECAPTCHA_v3_SITE_KEY=6Lf203shAAAAACksMkQsoGtbwx3uK2hOC4YIOI5j
+PUBLIC_FIREBASE_API_KEY='AIzaSyB2BHnpUEmaBsLyV15m4IdCTp3v_bPWrPM'
+PUBLIC_FIREBASE_AUTH_DOMAIN='anrcry.web.app'
+PUBLIC_FIREBASE_PROJECT_ID='anrcry'
+PUBLIC_FIREBASE_STORAGE_BUCKET='anrcry.appspot.com'
+PUBLIC_FIREBASE_MESSAGE_ID='325343770375'
+PUBLIC_FIREBASE_APP_ID='1:325343770375:web:ab191372d08ac782cbf7a2'
+PUBLIC_FIREBASE_MEASUREMENT_ID='G-HGRZTXGKTN'
+PUBLIC_FIREBASE_RECAPTCHA_SITE_KEY='6Lf203shAAAAACksMkQsoGtbwx3uK2hOC4YIOI5j'
+PUBLIC_FIREBASE_APP_NAME='birthday'
