--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,18 +1,19 @@
-name: "Firebase hosting CI/CD"
+name: "Birthday Card Hosting (CI/CD)"
 on:
-  schedule:
-    - cron: '0 0 */1 * 0'
   push:
     paths:
       - "src/**"
-      - "types/**"
       - "firebase.json"
-      - "public/404.html"
+      - "public/**"
       - "index.html"
-      # 📦 Dependency changes
       - "package.json"
     branches:
-      - "development"
+      - "dev"
+      
+  pull_request:
+    types: [closed]
+    branches: [main]
+    
   workflow_dispatch:
     
 jobs:
@@ -46,7 +47,7 @@ jobs:
   beta_preview:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{ github.event_name == 'push' && github.repository_owner == github.triggering_actor && github.ref_name == 'development' }}
+    if: ${{ github.repository_owner == github.triggering_actor && github.ref_name == 'dev' }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
@@ -59,11 +60,11 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIRE_APPS_7827C }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelID: beta
-          target: birthday-card
+          target: hbd-card
           expires: 2d
-          projectID: fire-apps-7827c
+          projectID: anrcry
       - name: "Delete the artifact"
         if: ${{ always() }}
         uses: geekyeggo/delete-artifact@v2
@@ -71,14 +72,15 @@ jobs:
           name: build
           failOnError: 'false'
 
-  # Manually triggered or Auto triggered
   live_preview:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{ github.event_name == 'schedule' || github.ref_name == 'main' }}
+    if: ${{ ( github.event_name == 'pull_request' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' )  }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
+        with:
+          ref: main
       - name: "Download the build artifact"
         uses: actions/download-artifact@v3
         with:
@@ -88,20 +90,13 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIRE_APPS_7827C }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelID: live
-          target: birthday-card
-          projectID: fire-apps-7827c
+          target: hbd-card
+          projectID: anrcry
       - name: "Delete the artifact"
         if: ${{ always() }}
         uses: geekyeggo/delete-artifact@v2
         with:
           name: build
           failOnError: 'false'
-      - name: "Notify pipedream about trigger."
-        if: ${{ github.event_name == 'schedule' }}
-        uses: hugoalh/trigger-pipedream-workflow-ghaction@v3.0.0
-        with:
-          key: ${{ secrets.PIPEDREAM_KEY }}
-          method: "webhook"
-          payload: ${{ toJSON(github.event) }}
