--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -75,7 +75,7 @@ jobs:
   live_preview:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{ ( github.event_name == 'pull_request' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' )  }}
+    if: ${{ github.event_name == 'workflow_dispatch' }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
