--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
-PUBLIC_FIREBASE_API_KEY='AIzaSyB2BHnpUEmaBsLyV15m4IdCTp3v_bPWrPM'
-PUBLIC_FIREBASE_AUTH_DOMAIN='anrcry.web.app'
-PUBLIC_FIREBASE_PROJECT_ID='anrcry'
-PUBLIC_FIREBASE_STORAGE_BUCKET='anrcry.appspot.com'
-PUBLIC_FIREBASE_MESSAGE_ID='325343770375'
-PUBLIC_FIREBASE_APP_ID='1:325343770375:web:ab191372d08ac782cbf7a2'
-PUBLIC_FIREBASE_MEASUREMENT_ID='G-HGRZTXGKTN'
+PUBLIC_FIREBASE_API_KEY='AIzaSyDXBpvAcm0a9zSuQoJLP92EfJBo0miEdtk'
+PUBLIC_FIREBASE_AUTH_DOMAIN='cybrixin.firebaseapp.com'
+PUBLIC_FIREBASE_PROJECT_ID='cybrixin'
+PUBLIC_FIREBASE_STORAGE_BUCKET='cybrixin.appspot.com'
+PUBLIC_FIREBASE_MESSAGE_ID='1045901013314'
+PUBLIC_FIREBASE_APP_ID='1:1045901013314:web:79898e873dcbaecc50d8db'
+PUBLIC_FIREBASE_MEASUREMENT_ID='G-LL1ZN7SLN5'
 PUBLIC_FIREBASE_RECAPTCHA_SITE_KEY='6Lf203shAAAAACksMkQsoGtbwx3uK2hOC4YIOI5j'
 PUBLIC_FIREBASE_APP_NAME='birthday'
