--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "build",
-    "site": "hbd-card",
+    "site": "birthday-cybrix",
     "ignore": [
       "firebase.json",
       "**/.*",
