--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
+        if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
+        with:
+          ref: main
       - name: "Node.js setup"
         uses: actions/setup-node@v3
         with:
@@ -75,7 +78,7 @@ jobs:
   live_preview:
     runs-on: ubuntu-latest
     needs: [ build ]
-    if: ${{ github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request' }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
