--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -44,7 +44,7 @@ jobs:
 
   live_preview:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'schedule' && github.ref_name == 'main') }}
+    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.ref_name == 'main') }}
     steps:
       - name: "Checkout to the branch"
         uses: actions/checkout@v3
