--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
-PUBLIC_FIREBASE_API_KEY='AIzaSyDXBpvAcm0a9zSuQoJLP92EfJBo0miEdtk'
-PUBLIC_FIREBASE_AUTH_DOMAIN='cybrixin.firebaseapp.com'
-PUBLIC_FIREBASE_PROJECT_ID='cybrixin'
-PUBLIC_FIREBASE_STORAGE_BUCKET='cybrixin.appspot.com'
-PUBLIC_FIREBASE_MESSAGE_ID='1045901013314'
-PUBLIC_FIREBASE_APP_ID='1:1045901013314:web:79898e873dcbaecc50d8db'
-PUBLIC_FIREBASE_MEASUREMENT_ID='G-LL1ZN7SLN5'
+PUBLIC_FIREBASE_API_KEY='AIzaSyCbG6XBWRIo9FCf0fjMojToY-yFtlegJZs'
+PUBLIC_FIREBASE_AUTH_DOMAIN='anweshan-cybrix.firebaseapp.com'
+PUBLIC_FIREBASE_PROJECT_ID='anweshan-cybrix'
+PUBLIC_FIREBASE_STORAGE_BUCKET='anweshan-cybrix.appspot.com'
+PUBLIC_FIREBASE_MESSAGE_ID='828339826823'
+PUBLIC_FIREBASE_APP_ID='1:828339826823:web:0ee26035c06a5d4b240822'
+PUBLIC_FIREBASE_MEASUREMENT_ID='G-Y1LJLEJMZ7'
 PUBLIC_FIREBASE_RECAPTCHA_SITE_KEY='6Lf203shAAAAACksMkQsoGtbwx3uK2hOC4YIOI5j'
 PUBLIC_FIREBASE_APP_NAME='birthday'
