--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -27,7 +27,7 @@ jobs:
       - name: "Node.js setup"
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - name: "Install Dependencies (Clean)"
         run: npm ci
       - name: "Build the project"
@@ -38,9 +38,9 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelID: beta
-          target: birthday-cybrix
+          target: birthday-card-cybrix-1bf55
           expires: 2d
-          projectID: cybrixin
+          projectID: anweshan-cybrix
 
   live_preview:
     runs-on: ubuntu-latest
@@ -53,7 +53,7 @@ jobs:
       - name: "Node.js setup"
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - name: "Install Dependencies (Clean)"
         run: npm ci
       - name: "Build the project"
@@ -64,5 +64,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelID: live
-          target: birthday-cybrix
-          projectID: cybrixin
+          target: birthday-card-cybrix-1bf55
+          projectID: anweshan-cybrix
